--- a/css/custom.css
+++ b/css/custom.css
@@ -8,7 +8,10 @@
  * Add any custom CSS below.                         *
  * Changes to this files will be ignored by GIT. *
  *****************************************************/
-
+	
+ .normal,
+ .dimmed,
+ header,
  body {
- 	
+     color: #fff;
  }
